spacing fixes

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -51,6 +51,7 @@ table {
 * {
     box-sizing: border-box;
 	max-width: 100%;
+	border: 1px solid red !important;
 }
 
 html, body {
@@ -65,7 +66,8 @@ h1, h2, h3, h4, h5 {
 }
 
 p {
-	line-height: 1.2;
+	line-height: 1.4;
+	margin: 1% 0;
 }
 
 /* Your code starts here! */
@@ -85,6 +87,7 @@ header, section, footer {
 header {
 	margin-top: 35px;
 	width: 100%;
+
 }
 
 nav, .logo {
@@ -93,12 +96,15 @@ nav, .logo {
 
 nav {
 	width: 75%;
+	height: inherit;
+	vertical-align: center;
 }
 
 nav a {
 	padding-right: 7%;
 	text-decoration: none;
 	color: #ccc;
+
 }
 
 /* button */
@@ -140,8 +146,12 @@ nav a {
 }
 
 .intro-heading {
-	font-size: 70px;
 	text-align: center;
+}
+
+.intro-heading h1 {
+	font-size: 70px;
+	padding-bottom: 10px;
 }
 
 .intro-section > .row {
@@ -152,8 +162,16 @@ nav a {
 	text-align: right;
 }
 
-
+/* footer */
 footer {
+	padding-top: 4%;
 	border-top: 2px solid #404040;
 }
+
+.copyright {
+	margin-top: 4%;
+	text-align: center;
+}
+
+
 
